--- a/views/invoices/issuedFull.ejs
+++ b/views/invoices/issuedFull.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-12 mb-3">
             <h5><a href="/invoices/open">Faktury k vystavení</a> | Vystavené faktury </h5>
-            <span>(<a href="/invoices/issued?show=list">seznam</a> | kompletní)</span>
+            <span>(<a href="/invoices/issued?show=list">seznam</a> | <a href="/invoices/issued?show=full">kompletní</a> | <a href="/invoices/issued?show=lastMonth">minulý měsíc</a>)</span>
 
         </div>
     </div>
