--- a/views/invoices/open.ejs
+++ b/views/invoices/open.ejs
@@ -18,7 +18,7 @@
                                 <input type="text" id="subscriptionPeriod" name="subscriptionPeriod" placeholder="Období" value="<%= user.plan %>" class="form-control" required>
                             </div>
                             <div class="col-12 col-lg-1">
-                                <%= user.subscriptionSource %>
+                                <p><%= user.subscriptionSource %></p>
                             </div>
                             <div class="col-12 col-lg-2">
                                 <input type="text" id="invoiceNum" name="invoiceNum" placeholder="Číslo FA" value="<%= lastInvoiceNumber + i + 1 %>" class="form-control" required>
