--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,6 +12,7 @@
                 Administrace
               </a>
               <ul class="dropdown-menu vybrat-predmet">
+                <li><a class="dropdown-item" href="/admin/dashboard">Dashboard</a></li>
                 <li><a class="dropdown-item" href="/admin/admin">Admin</a></li>
                 <li><a class="dropdown-item" href="/admin/stats">Statistiky</a></li>
                 <li><a class="dropdown-item" href="/admin/users">Uživatelé</a></li>
