count subscriptionSource for dashboard

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -144,6 +144,26 @@
                 </div>
             </div>
         </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 mb-3">
+            <div class="dashboard-card">
+                <div class="dashboard-card-header">
+                    <h6>Aktivace přes web</h6>
+                </div>
+                <div class="dashboard-card-body">
+                    <h2><%= numberOfUsersWithStripeSubscription %></h2>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 mb-3">
+            <div class="dashboard-card">
+                <div class="dashboard-card-header">
+                    <h6>Aktivace přes aplikaci</h6>
+                </div>
+                <div class="dashboard-card-body">
+                    <h2><%= numberOfUsersWithRevenuecatSubscription %></h2>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="row">
         <div class="col-12 mb-3">
