--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -53,6 +53,14 @@ body {
     display: none;
 }
 
+.card-info {
+    background: linear-gradient(135deg, rgb(221, 195, 127), rgb(245, 235, 200));
+    /* Optional: To ensure backward compatibility */
+    background-color: rgb(221, 195, 127); /* Fallback for older browsers */
+}
+
+
+
 /*CATEGORY*/
 
 .section-list .add-icon {
