--- a/views/invoices/open.ejs
+++ b/views/invoices/open.ejs
@@ -25,7 +25,7 @@
                             </div>
                             <div class="col-12 col-lg-2">
                                 <div class="input-group">
-                                    <input type="number" id="invoiceAmount" name="invoiceAmount" placeholder="Částka" value="<%= user.amount %>" class="form-control" required>
+                                    <input type="number" id="invoiceAmount" name="invoiceAmount" placeholder="Částka" value="<%= user.amount %>" class="form-control" step="0.01" required>
                                     <span class="input-group-text" style="border:none;background-color: white;">CZK</span>
                                 </div>
                             </div>
