saving price to user

--- a/views/admin/showUserDetail.ejs
+++ b/views/admin/showUserDetail.ejs
@@ -187,6 +187,13 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold d-flex align-items-center">
+                        <p>Výše předplatného</p>
+                    </div>
+                    <div class="col-8 d-flex align-items-center">
+                        <%= user.subscriptionPrice %> Kč <span class="text-small mx-2"> (<%= user.monthlySubscriptionPrice %> Kč měsíčně)</span>
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold d-flex align-items-center">
                         <p>Datum aktivace předplatného</p>
                     </div>
                     <div class="col-8 d-flex align-items-center">
