--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -71,6 +71,7 @@
                   </a>
                   <ul class="dropdown-menu vybrat-predmet">
                       <li><a class="dropdown-item" href="/auth/user/profile">Profil</a></li>
+                      <li><a class="dropdown-item" href="/auth/user/activity">Aktivita</a></li>
                       <li><a class="dropdown-item" href="/cards/saved">Uložené kartičky</a></li>
                       <li><a class="dropdown-item" href="/auth/user/logout">Odhlásit se</a></li>
                   </ul>
