--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -75,7 +75,8 @@
                                 <p class="card-header-period">zdarma</p>
                             </div>
                         </div>
-                        <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
+                        <div class="badge rounded-pill discount-badge" style="opacity: 0"><span>ušetříš x</span></div>
+                        <div class="price-tag-outer d-flex justify-content-center p-3 pt-0 pb-0">
                             <div class="price-tag-inner">
                                 <span class="price">0 Kč</span> / <span class="period">napořád</span>
                             </div>
@@ -136,12 +137,13 @@
                                 <p class="card-header-period">měsíční</p>
                             </div>
                         </div>
-                        <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
+                        <div class="badge rounded-pill discount-badge" style="opacity: 0"><span>ušetříš x</span></div>
+                        <div class="price-tag-outer d-flex justify-content-center p-3 pt-0 pb-0">
                             <div class="price-tag-inner ">
-                                <span class="price">199 Kč</span> / <span class="period">měsíčně</span>
+                                <span class="price">229 Kč</span> / <span class="period">měsíčně</span>
                             </div>
                         </div> 
-                        <p class="text-center monthly-equivalent">(199 Kč za měsíc)</p>
+                        <p class="text-center monthly-equivalent">(229 Kč za měsíc)</p>
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
                             <% if (!currentUser) { %>
                                 <a href="/auth/user/new?premium=true" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
@@ -220,7 +222,8 @@
                                 <p class="card-header-period">půlroční</p>
                             </div>
                         </div>
-                        <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
+                        <div class="badge rounded-pill discount-badge"><span>ušetříš 35 %</span></div>
+                        <div class="price-tag-outer d-flex justify-content-center p-3 pt-0 pb-0">
                             <div class="price-tag-inner">
                                 <span class="price">890 Kč</span> / <span class="period">půlročně</span>
                             </div>
@@ -265,7 +268,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            ušetříš 304 Kč<sup>**</sup>
+                                            ušetříš 484 Kč<sup>**</sup>
                                         </div>
                                     </div>
                                 </li>
@@ -313,7 +316,8 @@
                                 <p class="card-header-period">roční</p>
                             </div>
                         </div>
-                        <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
+                        <div class="badge rounded-pill discount-badge"><span>ušetříš 45 %</span></div>
+                        <div class="price-tag-outer d-flex justify-content-center p-3 pt-0 pb-0">
                             <div class="price-tag-inner">
                                 <span class="price">1 490 Kč</span> / <span class="period">ročně</span>
                             </div> 
@@ -358,7 +362,7 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            ušetříš 898 Kč<sup>**</sup>
+                                            ušetříš 1 258 Kč<sup>**</sup>
                                         </div>
                                     </div>
                                 </li>
